--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "vue-tsc": "^2.2.2"
   }
 }
